--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 
 <div class="container">
-    <h1>Send a WhatsApp Message</h1>
+    <h1>Click to order Water Can</h1>
     <button onclick="sendMessage()">Send Message</button>
 </div>
 
