--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Send WhatsApp Message</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Link to your favicon -->
     <style>
         body {
             display: flex;
